Lab1/Code/syntax.output
State 35 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList
    9           | ExtDecList error ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC DefList error
   15                | STRUCT error

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error
   22       | VarDec LB INT error

   23 ParamDec: Specifier VarDec

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec
   26        | VarList error VarList

   27 FunDec: ID LP VarList RP
   28       | ID LP RP

   29 CompSt: LC DefList StmtList RC
   30       | LC DefList StmtList error

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | Exp error
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | RETURN error SEMI
   41     | RETURN Exp error

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error SEMI
   46    | Specifier error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp
   51    | VarDec ASSIGNOP error

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp ASSIGNOP error
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | LP Exp error
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP Args error
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp LB error RB
   70    | Exp DOT ID
   71    | ID
   72    | INT
   73    | FLOAT

   74 Args: Exp COMMA Args
   75     | Exp
   76     | Args error Args


Terminals, with rules where they appear

$end (0) 0
error (256) 9 14 15 21 22 26 30 34 40 41 45 46 51 53 62 66 69 76
INT (258) 20 22 72
FLOAT (259) 73
ID (260) 16 18 19 27 28 65 66 67 70 71
SEMI (261) 4 5 33 36 40 44 45 46
COMMA (262) 8 24 48 74
ASSIGNOP (263) 50 51 52 53
RELOP (264) 56
PLUS (265) 57
MINUS (266) 58 63
STAR (267) 59
DIV (268) 60
AND (269) 54
OR (270) 55
DOT (271) 70
NOT (272) 64
TYPE (273) 10
LP (274) 27 28 37 38 39 61 62 65 66 67
RP (275) 27 28 37 38 39 61 65 67
LB (276) 20 21 22 68 69
RB (277) 20 68 69
LC (278) 12 14 29 30
RC (279) 12 29
STRUCT (280) 12 13 14 15
RETURN (281) 36 40 41
IF (282) 37 38
ELSE (283) 38
WHILE (284) 39
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8 9, on right: 4 8 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 23 44 45 46
StructSpecifier (37)
    on left: 12 13 14 15, on right: 11
OptTag (38)
    on left: 16 17, on right: 12 14
Tag (39)
    on left: 18, on right: 13
VarDec (40)
    on left: 19 20 21 22, on right: 7 8 20 21 22 23 49 50 51
ParamDec (41)
    on left: 23, on right: 24 25
VarList (42)
    on left: 24 25 26, on right: 24 26 27
FunDec (43)
    on left: 27 28, on right: 6
CompSt (44)
    on left: 29 30, on right: 6 35
StmtList (45)
    on left: 31 32, on right: 29 30 31
Stmt (46)
    on left: 33 34 35 36 37 38 39 40 41, on right: 31 37 38 39
DefList (47)
    on left: 42 43, on right: 12 14 29 30 42
Def (48)
    on left: 44 45 46, on right: 42
DecList (49)
    on left: 47 48, on right: 44 45 48
Dec (50)
    on left: 49 50 51, on right: 47 48
Exp (51)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73, on right: 33 34 36 37 38 39 41 50 52 53 54 55 56 57
    58 59 60 61 62 63 64 68 69 70 74 75
Args (52)
    on left: 74 75 76, on right: 65 66 74 76


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC DefList error
   15                | STRUCT . error

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 17 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   15 StructSpecifier: STRUCT error .

    $default  reduce using rule 15 (StructSpecifier)


State 9

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC DefList error

    LC  shift, and go to state 19


State 11

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

   19 VarDec: ID .
   27 FunDec: ID . LP VarList RP
   28       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 19 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    9 ExtDecList: ExtDecList . error ExtDecList

    error  shift, and go to state 21
    SEMI   shift, and go to state 22


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error
   22       | VarDec . LB INT error

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 20

   27 FunDec: ID LP . VarList RP
   28       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    ParamDec         go to state 32
    VarList          go to state 33


State 21

    9 ExtDecList: ExtDecList error . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 36
    VarDec      go to state 17


State 24

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error
   22       | VarDec LB . INT error

    error  shift, and go to state 37
    INT    shift, and go to state 38


State 25

   29 CompSt: LC . DefList StmtList RC
   30       | LC . DefList StmtList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error SEMI
   46    | Specifier . error SEMI

    error  shift, and go to state 40
    ID     shift, and go to state 34

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC
   14                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 44
    RC     shift, and go to state 45


State 29

   42 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 29


State 30

   28 FunDec: ID LP RP .

    $default  reduce using rule 28 (FunDec)


State 31

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 47


State 32

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 48

    $default  reduce using rule 25 (VarList)


State 33

   26 VarList: VarList . error VarList
   27 FunDec: ID LP VarList . RP

    error  shift, and go to state 49
    RP     shift, and go to state 50


State 34

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 35

    9 ExtDecList: ExtDecList . error ExtDecList
    9           | ExtDecList error ExtDecList .

    error  shift, and go to state 21

    error  [reduce using rule 9 (ExtDecList)]
    SEMI   reduce using rule 9 (ExtDecList)


State 36

    8 ExtDecList: VarDec COMMA ExtDecList .
    9           | ExtDecList . error ExtDecList

    error  shift, and go to state 21

    error  [reduce using rule 8 (ExtDecList)]
    SEMI   reduce using rule 8 (ExtDecList)


State 37

   21 VarDec: VarDec LB error .

    $default  reduce using rule 21 (VarDec)


State 38

   20 VarDec: VarDec LB INT . RB
   22       | VarDec LB INT . error

    error  shift, and go to state 51
    RB     shift, and go to state 52


State 39

   29 CompSt: LC DefList . StmtList RC
   30       | LC DefList . StmtList error

    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    $default  reduce using rule 32 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 40

   46 Def: Specifier error . SEMI

    SEMI  shift, and go to state 66


State 41

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error
   22       | VarDec . LB INT error
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp
   51    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 24

    $default  reduce using rule 49 (Dec)


State 42

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error SEMI

    error  shift, and go to state 68
    SEMI   shift, and go to state 69


State 43

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 47 (DecList)


State 44

   14 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 14 (StructSpecifier)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 47

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error
   22       | VarDec . LB INT error
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 48

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    ParamDec         go to state 32
    VarList          go to state 71


State 49

   26 VarList: VarList error . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    ParamDec         go to state 32
    VarList          go to state 72


State 50

   27 FunDec: ID LP VarList RP .

    $default  reduce using rule 27 (FunDec)


State 51

   22 VarDec: VarDec LB INT error .

    $default  reduce using rule 22 (VarDec)


State 52

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 53

   72 Exp: INT .

    $default  reduce using rule 72 (Exp)


State 54

   73 Exp: FLOAT .

    $default  reduce using rule 73 (Exp)


State 55

   65 Exp: ID . LP Args RP
   66    | ID . LP Args error
   67    | ID . LP RP
   71    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 71 (Exp)


State 56

   63 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


State 57

   64 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


State 58

   61 Exp: LP . Exp RP
   62    | LP . Exp error

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 76


State 59

   36 Stmt: RETURN . Exp SEMI
   40     | RETURN . error SEMI
   41     | RETURN . Exp error

    error  shift, and go to state 77
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 78


State 60

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 61

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 62

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 63

   29 CompSt: LC DefList StmtList . RC
   30       | LC DefList StmtList . error

    error  shift, and go to state 81
    RC     shift, and go to state 82


State 64

   31 StmtList: Stmt . StmtList

    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    $default  reduce using rule 32 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 83
    Stmt      go to state 64
    Exp       go to state 65


State 65

   33 Stmt: Exp . SEMI
   34     | Exp . error
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . DOT ID
